# src/schema/taskInfo.schema.ts
@@ -7,10 +7,21 @@ import {object, number, string, TypeOf} from 'zod'
 // }
 
 const params = {
-  params: object({
+  query: object({
     id: string({
       required_error: "id is required"
     }),
+    currentPage: string({
+      required_error: "currentPage is required"
+    }),
+    pageSize: string({
+      required_error: "pageSize is required"
+    })
+  })
+}
+
+const allTaskParams = {
+  query: object({
     currentPage: string({
       required_error: "currentPage is required"
     }),
@@ -24,4 +35,9 @@ export const getTaskInfoSchema = object({
   ...params
 })
 
+export const getAllTaskInfoSchema = object({
+  ...allTaskParams
+})
+
 export type UpdateTaskInfoInput = TypeOf<typeof getTaskInfoSchema>
+export type AllTaskInfoInput = TypeOf<typeof getAllTaskInfoSchema>
