# src/utils/swagger/Swagger.json
@@ -47,24 +47,32 @@
             "required": true,
             "type": "string"
           }
+        ]
+      }
+    },
+    "/getAllTask": {
+      "get": {
+        "summary": "获取任务列表",
+        "description": "获取任务列表",
+        "produces": [
+          "application/json"
         ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/todosResponse"
-              }
-            }
+        "parameters": [
+          {
+            "name": "currentPage",
+            "in": "query",
+            "description": "currentPage that needs to be deleted",
+            "required": true,
+            "type": "string"
           },
-          "400": {
-            "description": "Invalid status value",
-            "schema": {
-              "$ref": "#/definitions/InvalidResponse"
-            }
+          {
+            "name": "pageSize",
+            "in": "query",
+            "description": "pageSize that needs to be deleted",
+            "required": true,
+            "type": "string"
           }
-        }
+        ]
       }
     }
   },
